unpackaged/main/default/objects/Data_Masking_Configuration__mdt/Data_Masking_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This custom Metadata is used to store object and field information which is used in batch which runs after sandbox refresh to mask data</description>
    <label>Data Masking Configuration</label>
    <pluralLabel>Data Masking Configurations</pluralLabel>
</CustomObject>