unpackaged/main/default/objects/Data_Masking_Configuration__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>FieldName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>