unpackaged/main/default/objects/Data_Masking_Configuration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox will decide whether to consider field for data masking or not</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>