unpackaged/main/default/objects/Data_Masking_Configuration__mdt/fields/MaskType__c.field-meta.xml
<CustomField>
    <fullName>MaskType__c</fullName>
    <label>MaskType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>