unpackaged/main/default/objects/Data_Masking_Configuration__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>