unpackaged/main/default/objects/Data_Masking_Configuration__mdt/fields/QueryFilter__c.field-meta.xml
<CustomField>
    <fullName>QueryFilter__c</fullName>
    <label>QueryFilter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>